objects/Customer_Journey_Task__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Journey__c</fullName>
        <label>Customer Journey</label>
        <referenceTo>Customer_Journey__c</referenceTo>
        <relationshipLabel>Customer Journey Tasks</relationshipLabel>
        <relationshipName>Customer_Journey_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effort_d__c</fullName>
        <label>Effort (d)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Efforts_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Efforts Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Customer_Journey__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type_Ressource_Team_Location__c</fullName>
        <formula>Customer_Journey__r.Project__r.Name+&apos;/&apos;+Text(Type__c)+&apos;/&apos;+ Ressource__r.Name +&apos;/&apos;+ Team__c +&apos;/&apos;+if(Onsite__c=TRUE,&apos;Onsite&apos;,&apos;Offsite&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project/Type/Ressource/Team/Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ressource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ressource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ressource__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ressource__c</referenceTo>
        <relationshipLabel>Customer Journey Tasks</relationshipLabel>
        <relationshipName>Customer_Journey_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Task_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>text(Ressource__r.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Sheet</label>
        <referenceTo>Time_Sheet__c</referenceTo>
        <relationshipLabel>Customer Journey Tasks</relationshipLabel>
        <relationshipName>Customer_Journey_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Design</fullName>
                </value>
                <value>
                    <fullName>Solution Design</fullName>
                </value>
                <value>
                    <fullName>Architecture Work</fullName>
                </value>
                <value>
                    <fullName>Prototyping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Journey Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Effort_d__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Customer Journey Tasks</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Customer_Journey_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Effort_d__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Deferred</value>
        </filters>
        <label>All Open Customer Journey Tasks</label>
    </listViews>
    <listViews>
        <fullName>My_Customer_Journey_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Effort_d__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Customer Journey Tasks</label>
    </listViews>
    <nameField>
        <displayFormat>CJT-{0000}</displayFormat>
        <label>Customer Journey Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Journey Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_to_change_status_after_Completio</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;
text(priorvalue(Status__c))=&apos;Completed&apos;</errorConditionFormula>
        <errorMessage>You are not allowed to reopen tasks</errorMessage>
    </validationRules>
</CustomObject>